--- a/.github/workflows/release-creation.yml
+++ b/.github/workflows/release-creation.yml
@@ -52,3 +52,9 @@ jobs:
           artifacts: "./module.json,./WMS.zip"
           tag: latest
           body: ${{ github.event.release.body }}
+      - name: Publish Module to FoundryVTT Website
+        id: publish-to-foundry-website
+        uses: cs96and/FoundryVTT-release-package@v1
+        with:
+          package-token: ${{ secrets.PACKAGE_TOKEN }}
+          manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.json
